# pelican-examples

./: .gitignore  README.md
example-1/: CMakeLists.txt  notes.txt
example-1/emulator/: ServiceDataEmulator.cpp  ServiceDataEmulator.hpp  StreamDataEmulator.cpp  StreamDataEmulator.hpp  emulatorMain.cpp  main.cpp  mainServiceEmulator.cpp  mainStreamEmulator.cpp
example-1/pipeline/: DirectDataClient.cpp  DirectDataClient.hpp  Pipeline.cpp  Pipeline.hpp  ServiceData.cpp  ServiceData.hpp  ServiceDataAdapter.cpp  ServiceDataAdapter.hpp  StreamData.cpp  StreamData.hpp  StreamDataAdapter.cpp  StreamDataAdapter.hpp  main.cpp  pipeline.xml  pipelineMain.cpp
example-1/pipeline-dc/: DirectDataClient.cpp  main.cpp  pipeline-dc.xml
example-1/server/: ServiceDataChunker.cpp  ServiceDataChunker.hpp  StreamDataChunker.cpp  StreamDataChunker.hpp  main.cpp  server.xml  serverMain.cpp
